@@ -3,7 +3,6 @@ package oakbot.command;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.junit.Test;
@@ -28,7 +27,7 @@ public class CommandTest {
 
 			@Override
 			public List<String> aliases() {
-				return Arrays.asList("one", "two");
+				return List.of("one", "two");
 			}
 
 			@Override
