@@ -6,9 +6,9 @@ import static org.junit.Assert.assertTrue;
 
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
 
 import org.junit.Rule;
@@ -32,7 +32,7 @@ public class JavadocDaoUncachedTest {
 	public void search_multiple_results() throws Exception {
 		Collection<String> names = dao.search("list");
 		Set<String> actual = new HashSet<>(names);
-		Set<String> expected = new HashSet<>(Arrays.asList("java.awt.List", "java.util.List"));
+		Set<String> expected = new HashSet<>(List.of("java.awt.List", "java.util.List"));
 		assertEquals(expected, actual);
 	}
 
@@ -40,7 +40,7 @@ public class JavadocDaoUncachedTest {
 	public void search_single_result() throws Exception {
 		Collection<String> names = dao.search("java.awt.list");
 		Set<String> actual = new HashSet<>(names);
-		Set<String> expected = new HashSet<>(Arrays.asList("java.awt.List"));
+		Set<String> expected = new HashSet<>(List.of("java.awt.List"));
 		assertEquals(expected, actual);
 	}
 
